--- a/index.html
+++ b/index.html
@@ -1,59 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Loopstudios landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Careers
-  Events
-  Products
-  Support
+    <title>Frontend Mentor | Loopstudios landing page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  Immersive experiences that deliver
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <section class="hero">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <img class="navbar-brand" src="images/logo.svg" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Careers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Support</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <div class="hero-content-wrapper">
+        <div class="hero-content">
+          <h1 id="headline">Immersive Experiences That Deliver</h1>
+        </div>
+      </div>
+    </section>
+    <section class="main-content">
+      <section class="interactive-section">
+        <img
+          src="images/mobile/image-interactive.jpg"
+          id="img-interactive-section"
+          alt=""
+        />
+        <div class="interactive-text-block">
+          <h2>THE LEADER IN INTERACTIVE VR</h2>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </section>
+      <section class="creations grid">
+        <h2 class="grid-header creations-heading">OUR CREATIONS</h2>
+        <div class="creation-1 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-deep-earth.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">DEEP EARTH</h2>
+        </div>
+        <div class="creation-2 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-night-arcade.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">NIGHT ARCADE</h2>
+        </div>
+        <div class="creation-3 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-soccer-team.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">SOCCER TEAM VR</h2>
+        </div>
+        <div class="creation-4 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-grid.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">THE GRID</h2>
+        </div>
+        <div class="creation-5 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-from-above.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">FROM UP ABOVE VR</h2>
+        </div>
+        <div class="creation-6 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-pocket-borealis.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">POCKET BOREALIS</h2>
+        </div>
+        <div class="creation-7 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-curiosity.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">THE CURIOSITY</h2>
+        </div>
+        <div class="creation-8 creation-content">
+          <img
+            class="creation-image"
+            src="images/mobile/image-fisheye.jpg"
+            alt=""
+          />
+          <h2 class="creation-image-text">MAKE IT FISHEYE</h2>
+        </div>
 
-  The leader in interactive VR
-
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
-
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <button class="grid-header grid-footer creations-button">
+          SEE ALL
+        </button>
+      </section>
+    </section>
+    <footer>
+      <div class="footer-nav">
+        <img id="logo-footer" src="images/logo.svg" alt="" />
+        <a href="">About</a>
+        <a href="">Careers</a>
+        <a href="">Events</a>
+        <a href="">Products</a>
+        <a href="">Support</a>
+      </div>
+      <div class="footer-social">
+        <img class="footer-icon" src="images/icon-facebook.svg" alt="" />
+        <img class="footer-icon" src="images/icon-twitter.svg" alt="" />
+        <img class="footer-icon" src="images/icon-pinterest.svg" alt="" />
+        <img class="footer-icon" src="images/icon-instagram.svg" alt="" />
+      </div>
+      <p class="credentials">© 2021 Loopstudios. All rights reserved.</p>
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
