--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
     </section>
     <section class="main-content">
       <section class="interactive-section">
-        <img
-          src="images/mobile/image-interactive.jpg"
-          id="img-interactive-section"
-          alt=""
-        />
+        <picture id="img-interactive-section">
+          <source
+            srcset="images/desktop/image-interactive.jpg"
+            media="(min-width: 992px)"
+          />
+          <img src="images/mobile/image-interactive.jpg" />
+        </picture>
         <div class="interactive-text-block">
-          <h2>THE LEADER IN INTERACTIVE VR</h2>
-          <p>
+          <h2 id="interactive-headline">THE LEADER IN INTERACTIVE VR</h2>
+          <p id="interactive-body">
             Founded in 2011, Loopstudios has been producing world-class virtual
             reality projects for some of the best companies around the globe.
             Our award-winning creations have transformed businesses through
@@ -101,92 +103,114 @@
       <section class="creations grid">
         <h2 class="grid-header creations-heading">OUR CREATIONS</h2>
         <div class="creation-1 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-deep-earth.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-deep-earth.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-deep-earth.jpg" />
+          </picture>
           <h2 class="creation-image-text">DEEP EARTH</h2>
         </div>
         <div class="creation-2 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-night-arcade.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-night-arcade.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-night-arcade.jpg" />
+          </picture>
           <h2 class="creation-image-text">NIGHT ARCADE</h2>
         </div>
         <div class="creation-3 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-soccer-team.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-soccer-team.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-soccer-team.jpg" />
+          </picture>
           <h2 class="creation-image-text">SOCCER TEAM VR</h2>
         </div>
         <div class="creation-4 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-grid.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-grid.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-grid.jpg" />
+          </picture>
           <h2 class="creation-image-text">THE GRID</h2>
         </div>
         <div class="creation-5 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-from-above.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-from-above.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-from-above.jpg" />
+          </picture>
           <h2 class="creation-image-text">FROM UP ABOVE VR</h2>
         </div>
         <div class="creation-6 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-pocket-borealis.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-pocket-borealis.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-pocket-borealis.jpg" />
+          </picture>
           <h2 class="creation-image-text">POCKET BOREALIS</h2>
         </div>
         <div class="creation-7 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-curiosity.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-curiosity.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-curiosity.jpg" />
+          </picture>
           <h2 class="creation-image-text">THE CURIOSITY</h2>
         </div>
         <div class="creation-8 creation-content">
-          <img
-            class="creation-image"
-            src="images/mobile/image-fisheye.jpg"
-            alt=""
-          />
+          <picture class="creation-image">
+            <source
+              srcset="images/desktop/image-fisheye.jpg"
+              media="(min-width: 992px)"
+            />
+            <img src="images/mobile/image-fisheye.jpg" />
+          </picture>
           <h2 class="creation-image-text">MAKE IT FISHEYE</h2>
         </div>
 
-        <button class="grid-header grid-footer creations-button">
-          SEE ALL
-        </button>
+        <button class="grid-footer creations-button">SEE ALL</button>
       </section>
     </section>
     <footer>
-      <div class="footer-nav">
-        <img id="logo-footer" src="images/logo.svg" alt="" />
-        <a href="">About</a>
-        <a href="">Careers</a>
-        <a href="">Events</a>
-        <a href="">Products</a>
-        <a href="">Support</a>
+      <div class="footer-container">
+        <div class="footer-nav">
+          <img id="logo-footer" src="images/logo.svg" alt="" />
+          <div class="footer-links">
+            <a href="">About</a>
+            <a href="">Careers</a>
+            <a href="">Events</a>
+            <a href="">Products</a>
+            <a href="">Support</a>
+          </div>
+        </div>
+        <div class="footer-right">
+          <div class="footer-social">
+            <img class="footer-icon" src="images/icon-facebook.svg" alt="" />
+            <img class="footer-icon" src="images/icon-twitter.svg" alt="" />
+            <img class="footer-icon" src="images/icon-pinterest.svg" alt="" />
+            <img class="footer-icon" src="images/icon-instagram.svg" alt="" />
+          </div>
+          <p class="credentials">© 2021 Loopstudios. All rights reserved.</p>
+        </div>
       </div>
-      <div class="footer-social">
-        <img class="footer-icon" src="images/icon-facebook.svg" alt="" />
-        <img class="footer-icon" src="images/icon-twitter.svg" alt="" />
-        <img class="footer-icon" src="images/icon-pinterest.svg" alt="" />
-        <img class="footer-icon" src="images/icon-instagram.svg" alt="" />
-      </div>
-      <p class="credentials">© 2021 Loopstudios. All rights reserved.</p>
     </footer>
+
+    <script src="app.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
